# zer0

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  gopath.md  main.go
src/: config.rs  main.rs
